# X402-Solana

./: .gitignore  ARCHITECTURE.md  Anchor.toml  BUILD_STATUS.md  BUILD_SUCCESS.md  CURRENT_BUILD_ISSUE.md  CURRENT_STATUS.md  CURRENT_STATUS_AND_NEXT_STEPS.md  Cargo.lock.bak  DEVNET_TESTING_GUIDE.md  DEVNET_TEST_REPORT.md  E2E_402_INSURANCE_TEST_REPORT.md  END_TO_END_TEST_REPORT.md  FEATURE_COMPARISON.md  FINAL_STATUS.md  GASLESS_402_GUIDE.md  INSTALLATION_PROGRESS.md  INSTALLATION_SCRIPT.sh  PROJECT_SUMMARY.md  QUICKSTART.md  QUICKSTART_X402.md  README.md  README_BUILD.md  SETUP_GUIDE.md  TEST_README.md  X402_COMPLETE_TEST_REPORT.md  X402_FACILITATOR_README.md  X402_INTEGRATION_SUMMARY.md  build.sh  package-lock.json  package.json
.claude/: settings.local.json
examples/client-sdk/: x402-client.ts
examples/protected-api/: package-lock.json  package.json
examples/protected-api/src/: index.ts  x402-middleware.ts
facilitator/: .env.example  package-lock.json  package.json  tsconfig.json
facilitator/src/: index.ts  types.ts
facilitator/src/handlers/: settle.ts  supported.ts  verify.ts
programs/x402_insurance/: Cargo.toml
programs/x402_insurance/src/: errors.rs  lib 2.rs  lib.rs  state.rs
scripts/: check-all-tokens.ts  check-balance.ts  deploy.sh  fund-test-wallets.ts  initialize.js  setup-test-wallets.ts  transfer-from-old-wallet.ts  verify-new-wallet.ts
tests/: complete-e2e-test.ts  devnet-e2e-test.ts  devnet-test.ts  e2e-x402-insurance.ts  gasless-purchase-test.ts  liquidation-test.ts  timeout-claim-test.ts  x402_insurance.ts
