[package]
name = "x402_insurance"
version = "2.0.0"
description = "X402 Insurance Protocol - Zero-Fee Insurance for Web3 API Payments on Solana"
edition = "2021"
license = "GPL-3.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "x402_insurance"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
